# mba-ai-applications-sentinela

./: .env.example  .gitignore  CLAUDE.md  README.md  apresentacao.qmd  avaliacao.py  coleta.py  fundo.html  main.py  notifica.py  paper.qmd  pyproject.toml  referencias.bib  requirements.txt  resumo.py  schema.py  score.py
.github/workflows/: semanal.yml
assets/: gerar_fundo_slides.py  gerar_logo.py
dados/: amostra_semana.csv  relatorio_exemplo.json  relatorio_meta.json
entrega/: apresentacao.html
relatorio/: apresentacao.qmd  paper.qmd
src/sentinela/: __init__.py  __main__.py
src/sentinela/aplicacao/: __init__.py  pipeline.py
src/sentinela/dominio/: __init__.py  avaliacao.py  modelos.py  risco.py
src/sentinela/infra/: __init__.py  llm.py  nasa.py  whatsapp.py
tests/: test_pipeline.py
