[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "sentinela"
version = "1.0.0"
description = "Radar semanal de risco de asteroides — CRISP-DM + LLM (trabalho final AI Applications, MBA)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "requests>=2.31",
  "pandas>=2.0",
  "numpy>=1.26",
  "python-dotenv>=1.0",
  "pydantic>=2.6",
  "openai>=1.40",
]

[project.optional-dependencies]
# Dependências para renderizar o relatório/slides (Quarto) e rodar os testes.
relatorio = ["matplotlib>=3.8", "jupyter>=1.0", "tabulate>=0.9"]
dev = ["pytest>=8.0"]

[project.scripts]
sentinela = "sentinela.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
